<resources>
    <string name="app_name">Shoe Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="welcome">Welcome</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="to_the">to the</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="first_instruction_note">You\'ll be starting with empty shoe list of your store, You can add a new shoe by pressing the add button.</string>
    <string name="second_instruction_note">Once you press the add button you\'ll be directed to another page to add details of the new shoe.\nWhen you\'re done press the save button to submit to your list or Cancel to discard.</string>
    <string name="let_s_begin">Let\'s Begin</string>
    <string name="logout">Logout</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="size_style">- Size: </string>
    <string name="shoe_company">Shoe Company</string>
    <string name="company_style">- Company: </string>
    <string name="shoe_description">Shoe Description</string>
    <string name="desc_style">- Description: </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="content_desc_for_add_button">Add button for new shoe</string>
</resources>