<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Linear layout as the parent since it's simple design which all view are under each other -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screens.WelcomeFragment">

        <TextView
            android:id="@+id/first_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/second_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:fontFamily="serif-monospace"
            android:text="@string/to_the"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/third_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/shoe_store"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/let_s_start" />

    </LinearLayout>
</layout>